--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UsabilityHub</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -53,6 +54,215 @@
             </div>
         </div>
     </div>
+
+    <!-- Companies Section -->
+
+    <div class="company-section">
+        <div class="container">
+            <div class="company-header">
+                The world’s best companies rely on UsabilityHub to make better design decisions.
+            </div>
+            <div class="company-section-logo flex">
+                <img src="./assets/asset 3.png" alt="" />
+
+                <img src="./assets/asset 4.png" alt="" />
+
+                <img src="./assets/asset 5.png" alt="" />
+
+                <img src="./assets/asset 6.png" alt="" />
+
+                <img src="./assets/asset 7.png" alt="" />
+
+                <img src="./assets/asset 8.svg" alt="" />
+
+                <img src="./assets/asset 9.png" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <div class="features">
+        <div class="container">
+            <div class="features-header">
+                <p>Your user research Swiss Army knife</p>
+                <a href="#" class="button1">See all features <i class="bx bx-right-arrow-alt"></i
+          ></a>
+            </div>
+            <div class="feature-card flex">
+                <div class="card-img flex">
+                    <img src="./assets/asset 11.svg" alt="" />
+                    <h2>Card Sorting</h2>
+                    <p>Discover how people group and label information.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+
+                <div class="card-img flex">
+                    <img src="./assets/asset 17.svg" alt="" />
+                    <h2>Prototype tests</h2>
+                    <p>Discover how people navigate your Figma prototypes.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+
+                <div class="card-img flex">
+                    <img src="./assets/asset 13.svg" alt="" />
+                    <h2>First click tests</h2>
+                    <p>Test interaction with first click and navigation tests.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+
+                <div class="card-img flex">
+                    <img src="./assets/asset 14.svg" alt="" />
+                    <h2>Five second tests</h2>
+                    <p>Test comprehensibility by measuring first impressions.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+
+                <div class="card-img flex">
+                    <img src="./assets/asset 15.svg" alt="" />
+                    <h2>Design surveys</h2>
+                    <p>Get feedback on images, videos or audio files.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+
+                <div class="card-img flex">
+                    <img src="./assets/asset 16.svg" alt="" />
+                    <h2>Preference tests</h2>
+                    <p>Find out which designs users prefer and why.</p>
+                    <a href="#" class="button1">Learn More<i class="bx bx-right-arrow-alt"></i
+            ></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Big Features Section -->
+    <div class="big-features">
+        <div class="container flex big-fea">
+            <div class="big-img">
+                <img src="./assets/asset 18.png" alt="" />
+            </div>
+            <div class="big-content flex">
+                <h3>Effortless validation for</h3>
+                <h1>Design professionals</h1>
+                <p>
+                    Test interfaces, interaction flows, iconography and more, to help you create intuitive and delightful experiences for your users.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="big-features">
+        <div class="container flex big-fea" style="flex-direction: row-reverse">
+            <div class="big-img">
+                <img src="./assets/asset 24.png" alt="" />
+            </div>
+            <div class="big-content flex">
+                <h3>Optimisation for</h3>
+                <h1>Marketers</h1>
+                <p>
+                    Fine-tune landing pages, messaging, and creative, helping you optimise conversion rates on marketing campaigns and product launches.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="big-features">
+        <div class="container flex big-fea">
+            <div class="big-img">
+                <img src="./assets/asset 21.png" alt="" />
+            </div>
+            <div class="big-content flex">
+                <h3>Easier decision making for</h3>
+                <h1>Product managers</h1>
+                <p>
+                    Ensure you’re delivering the right features to the right customers by validating product concepts with your target audience.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Examples Section -->
+
+    <div class="example">
+        <div class="container">
+            <div class="examples-header">
+                <p>One platform, endless possibilities</p>
+                <a href="#" class="button1">See more examples <i class="bx bx-right-arrow-alt"></i
+          ></a>
+            </div>
+
+            <div class="example-card-area flex">
+                <a href="#" class="example-card">
+                    <h3>Can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="example-card">
+                    <h3>Can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="example-card">
+                    <h3>Can users complete a task in my software interface?</h3>
+                </a>
+                <a href="#" class="example-card">
+                    <h3>Can users complete a task in my software interface?</h3>
+                </a>
+            </div>
+        </div>
+
+        <!-- CTA -->
+
+        <div class="cta">
+            <div class="container main-cta flex">
+                <h1>Start Testing Today</h1>
+                <p>Take the guesswork out of design decisions</p>
+                <a href="#" class="button2">Get Started</a>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <footer>
+            <div class="container flex footercontainer">
+                <a href="" class="company-logo">
+                    <img src="./assets/asset 1.png" alt="">
+                </a>
+
+                <div class="linkcol flex">
+                    <h4>Product</h4>
+                    <a href="" class="hoverlink">Overview</a>
+                    <a href="" class="hoverlink">Pricing</a>
+                    <a href="" class="hoverlink">Customer</a>
+                    <a href="" class="hoverlink">Signup</a>
+                    <a href="" class="hoverlink">Status Page</a>
+                </div>
+
+                <div class="linkcol flex">
+                    <h4>Methodologies</h4>
+                    <a href="" class="hoverlink">Overview</a>
+                    <a href="" class="hoverlink">Pricing</a>
+                    <a href="" class="hoverlink">Customer</a>
+                    <a href="" class="hoverlink">Signup</a>
+                    <a href="" class="hoverlink">Status Page</a>
+                </div>
+
+                <div class="linkcol flex ">
+                    <h4>Resources</h4>
+                    <a href="" class="hoverlink">Overview</a>
+                    <a href="" class="hoverlink">Pricing</a>
+                    <a href="" class="hoverlink">Customer</a>
+                    <a href="" class="hoverlink">Signup</a>
+                    <a href="" class="hoverlink">Status Page</a>
+                </div>
+
+
+            </div>
+        </footer>
+
+        <div class="subfooter">
+            <p>Copyright @2023 All rights reserved || Made by Deepanshu Dodke</p>
+        </div>
+
 </body>
 
 </html>
