--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UsabilityHub</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 </head>
 
@@ -26,7 +27,7 @@
             <div class="company-logo flex">
                 <img src="./assets/asset 1.png" alt="" />
             </div>
-            <div class="nav-bar">
+            <div class="nav-bar" id="nav-links">
                 <ul class="flex">
                     <li><a href="#">Product</a></li>
                     <li><a href="#">Customer</a></li>
@@ -36,6 +37,7 @@
                     <li><a href="#" class="button2">Sign up</a></li>
                 </ul>
             </div>
+            <a href="" class="nav-toggle hover-links" id="nav-toggl"><i class='bx bx-menu'></i></a>
         </div>
     </nav>
 
@@ -156,7 +158,7 @@
     </div>
 
     <div class="big-features">
-        <div class="container flex big-fea" style="flex-direction: row-reverse">
+        <div class="container flex big-fea" id="second-big-feature">
             <div class="big-img">
                 <img src="./assets/asset 24.png" alt="" />
             </div>
@@ -262,6 +264,15 @@
         <div class="subfooter">
             <p>Copyright @2023 All rights reserved || Made by Deepanshu Dodke</p>
         </div>
+
+        <script>
+            const togglebutton = document.getElementById('nav-toggl');
+            const navLinks = document.getElementById('nav-links');
+
+            togglebutton.addEventListener('click', () => {
+                navLinks.classList.toggle('active');
+            })
+        </script>
 
 </body>
 
